plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'kr'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
jar{enabled = true}
bootJar{
    enabled = true
}

repositories {
    mavenCentral()
}
ext{
    set('springCloudVersion', "2023.0.2")
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    // spring security
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.4'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '3.3.4'
    // spring webflux
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '3.3.4'
    // spring cloud
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '4.0.0'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-circuitbreaker-reactor-resilience4j', version: '3.1.2'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '4.1.3'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    // actuator
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.3.4'
    // prometheus
    implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.13.4'
    // spring doc
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-ui', version: '2.6.0'
    // config
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-config', version: '4.1.3'
    // redis
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.3.4'
    // mongo
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
